# game-solver

./: .gitignore  ChangeLog.md  README.md  abVScached.html  algorithims.md  build.sh  copyStatic.sh  default.nix  game-solver.cabal  minimaxVScached.html  package.yaml  result.html  stack.yaml
app/: Main.hs
client/: Main.hs  Solvers.hs  client.cabal
client/Shared/: Checkbox.hs  DropDown.hs
common/: Common.hs  ExtendedNum.hs  Messages.hs  Model.hs  Solvers.hs  Utils.hs  common.cabal
common/Games/: Connect4.hs  GOPS.hs  Games.hs  TicTacToe.hs  Types.hs  Utils.hs
common/Games/Messages/: Connect4.hs  GOPS.hs  TicTacToe.hs
common/Games/TicTacToe/: Messages.hs  Model.hs  Update.hs  View.hs
common/Shared/: Checkbox.hs  DropDown.hs
common/Solvers/: Minimax.hs  MinimaxCached.hs  Model.hs  Types.hs  Update.hs  Utils.hs  View.hs
server/: Benchmark.hs  Main.hs  server.cabal
src/: ExtendedNum.hs  Messages.hs  Model.hs  Solver.hs  Solvers.hs  TicTacToe.hs  Update.hs  Utils.hs  View.hs
src/Shared/: Checkbox.hs  DropDown.hs
src/Solvers/: Messages.hs  Minimax.hs  Model.hs  Solver.hs  Types.hs  View.hs
src/TicTacToe/: Messages.hs  Model.hs  Update.hs  View.hs
static/: fonts.css  main.css
static/css/: fonts.css  main.css
static/css/fonts/: icomoon.eot
test/: Spec.hs
